--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,9 @@
     "@reduxjs/toolkit": "^2.0.1",
     "dev-pulse": "file:..",
     "firebase": "^10.7.2",
-    "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
-    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
-    "react-moment": "^1.1.3",
-    "react-quill": "^2.0.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-toastify": "^10.0.4",
