--- a/package.json
+++ b/package.json
@@ -17,11 +17,8 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "is-url": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
-    "slugify": "^1.6.6",
-    "uuid": "^9.0.1"
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
