--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dev-pulse",
+  "name": "quick-quip",
   "version": "1.0.0",
-  "description": "",
+  "description": "A full stack MERN URL shortner & QR Code generator",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -10,19 +10,19 @@
     "build": "npm install && npm install --prefix client --production=false && npm run build --prefix client "
   },
   "keywords": [],
-  "author": "",
+  "author": "olifarhaan",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "qrcode": "^1.5.3",
-    "sharp": "^0.33.2"
+    "nodemailer": "^6.9.9",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
